--- a/tracker/templates/services.html
+++ b/tracker/templates/services.html
@@ -8,22 +8,20 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-            <h3 class="sv-title">Electric Distribution and transmission design engineering</h3>
+            <h3 class="sv-title">ELECTRIC DISTRIBUTION AND TRANSMISSION LINE DESIGN</h3>
             <ul class="bt-lst">
-                <li>Overhead & Underground line design
+                <li>Overhead and Underground Line Design
                     <ul>
-                        <li>Wood Pole design</li>
-                        <li>sag studies, Analysis and design</li>
-                        <li>Pole loading Analysis</li>
-                        <li>Underbuilt design</li>
-                        <li>System Expansion/New Line Design</li>
-                        <li>Overhead to Underground Conversion Design</li>
-                        <li>ROW and Relocation design</li>
+                        <li>Structure design: wood, concrete, steel, laminated, composite</li>
+                        <li>Code analysis</li>
+                        <li>Conductor sag analysis and design</li>
+                        <li>System expansion</li>
+                        <li>Road widening relocation design</li>
+                        <li>Overhead to underground conversion design</li>
+                        <li>Distribution under-build design</li>
                     </ul>
                 </li>
                 <li>Line hardening and resiliency design</li>
-                <li>Work order design</li>
-                <li>Construction project management and design order process</li>
             </ul>
         </div>
         <div class="col-md-2"></div>
@@ -31,26 +29,60 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-            <h3 class="sv-title">FOC Engineering Design</h3>
-         <ul class="bt-lst">
-                <li>Aerial and underground Design</li>
-                <li>Joint Use Engineering: Make ready review and solutions</li>
-                <li>CAD/ GIS Services</li>
-            </ul>
+            <h3 class="sv-title">TELECOMMUNICATION ENGINEERING DESIGN</h3>
+              <ul class="bt-lst">
+                <li>Overhead and Underground line design</li>
+                <li>Joint use engineering: Make ready analysis and solutions</li>
+              </ul>
         </div>
         <div class="col-md-2"></div>
     </div>
 
+
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h3 class="sv-title">CONSTRUCTION MANAGEMENT SERVICES</h3>
+              <ul class="bt-lst">
+                <li>Preconstruction consultation</li>
+                <li>Value engineering</li>
+                <li>Scheduling</li>
+                <li>Material procurement</li>
+                <li>Project management</li>
+                <li>Construction inspection</li>
+                <li>Budget development and monitorization</li>
+              </ul>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h3 class="sv-title">CAD/GIS SERVICES</h3>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h3 class="sv-title">RIGHT-OF-WAY and EASEMENT PROCUREMENT</h3>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+
+
       <div class="row">
           <div class="col-md-2"></div>
         <div class="col-md-8">
-            <h3 class="sv-title">Wireless Network Design Services</h3>
+            <h3 class="sv-title">WIRELESS NETWORK DESIGN SERVICES</h3>
             <ul class="bt-lst">
                 <li>Radio and Microwave network design
                     <ul>
-                        <li>Network topology and route design</li>
-                        <li>Path profiling and Performance prediction/analysis</li>
-                        <li>Interference Analysis</li>
+                        <li>Path profiling</li>
+                        <li>Performance prediction/analysis</li>
+                        <li>Interface analysis</li>
                         <li>Frequency band selection and coordination</li>
                         <li>Loss/Attenuation Calculations</li>
                         <li>Equipment selection</li>
@@ -58,7 +90,7 @@
                 </li>
                 <li>Network Design Consulting services
                     <ul>
-                        <li>Feasibility study</li>
+                        <li>Feasibility studies</li>
                         <li>Solution development</li>
                         <li>Implementation and integration planning</li>
                         <li>Problem and opportunity assessment</li>
@@ -71,12 +103,11 @@
         <div class="row">
             <div class="col-md-2"></div>
           <div class="col-md-8">
-            <h3 class="sv-title">Consulting</h3>
+            <h3 class="sv-title">CONSULTING</h3>
               <ul class="bt-lst">
-                <li>JUA Consulting</li>
-                <li>Easement acquisition</li>
-                <li>Facility Management</li>
-                <li>Permitting preparation Services</li>
+                <li>Joint Use Utilities consulting</li>
+                <li>Facility management</li>
+                <li>Permitting preparation services</li>
             </ul>
         </div>
             <div class="col-md-2"></div>
