--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -80,8 +80,11 @@
                 <div class="col-md-6">
                     <h4 class="hd-lst">Services</h4>
                     <ul class="bt-lst">
-                        <li>Electric Distribution and transmission design engineering</li>
-                        <li>FOC Engineering Design</li>
+                        <li>Electric Distribution and Transmission Line Design</li>
+                        <li>Telecommunication Engineering Design</li>
+                        <li>Construction Management Services</li>
+                        <li>CAD/GIS SERVICES</li>
+                        <li>RIGHT-OF-WAY and Easement Procurement</li>
                         <li>Wireless Network Design Services</li>
                         <li>Consulting</li>
                     </ul>
@@ -89,7 +92,7 @@
                 <div class="col-md-3 pt-10">
                     <h4><a class="hd-lst" href="{{ url_for('main.contact') }}">Contact us</a></h4>
                     <ul class="bt-lst">
-                        <li>Email:info@conexussolution.com</li>
+                        <li>Email: info@conexussolution.com</li>
                         <li>+1 (317)6145648</li>
                     </ul>
                 </div>
